compiler/testData/diagnostics/tests/backingField/prohibitMissedMustBeInitializedWhenThereIsLocalClass/localClass.fir.kt
fun main() {
    class Foo {
        <!MUST_BE_INITIALIZED!>var x: String<!>
            set(value) {}

        init {
            x = ""
        }
    }
}
